[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
authors = ["Elviss Kustans <n3o59hf@gmail.com>"]

[dependencies]
prse = "1.2.1"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"
itertools = "0.13.0"
fxhash = "0.2.1"
rayon = "1.10.0"
binary-heap-plus = "0.5.0"
cached = "0.54.0"